-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.1.0, Qt Creator 2.2.0
-
Windows Vista x64
-
8ef69343b882fa3dc0156ffc947e45c844d8ff0d
The tab is plain empty:
- depends on
-
QTCREATORBUG-4256 Maemo tool chain detected incorrectly
-
- Closed
-
- relates to
-
QTCREATORBUG-4203 Application output does not show the app's name when debugging on Symbian
-
- Closed
-
- replaces
-
QTCREATORBUG-3899 No title shows in application output window when doing Maemo emulator debugging.
-
- Closed
-