Maemo: Show project name in application output window when debugging.

The tab is widget title is currently empty, so users might not know
what is running there.

Task-number: QTCREATORBUG-3775
Reviewed-by: hjk